--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -33,6 +33,17 @@
         app:layout_constraintTop_toTopOf="@id/ibBack" />
 
     <TextView
+        android:id="@+id/tvTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ibBack"
+        android:textSize="12sp"
+        android:textColor="#948D7D"
+        android:layout_marginTop="12dp"
+        />
+
+    <TextView
         android:id="@+id/tvInformation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,10 +51,10 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@id/etCard"
         app:layout_constraintStart_toStartOf="@id/ibBack"
-        app:layout_constraintTop_toBottomOf="@id/ibBack" />
+        app:layout_constraintTop_toBottomOf="@id/tvTimer" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etCard"
@@ -112,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ödənişin məbləği"
-        android:textColor="#020202"
+        android:textColor="#948D7D"
         android:textSize="16sp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@id/guideline"
@@ -137,7 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ödənişin ID-si"
-        android:textColor="#020202"
+        android:textColor="#948D7D"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/textView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -166,6 +177,7 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="@id/guideline1"
         app:layout_constraintBottom_toTopOf="@id/bCancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -177,7 +189,7 @@
         android:id="@+id/bCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@drawable/shape_cancel_button"
         android:text="@string/l_v_et"
         android:textAllCaps="false"
         android:textColor="@color/orange"
@@ -185,8 +197,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="@color/orange"
-        app:strokeWidth="20dp" />
+        />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -195,6 +206,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.83" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
