--- a/app/src/main/res/layout/fragment_visa.xml
+++ b/app/src/main/res/layout/fragment_visa.xml
@@ -33,7 +33,9 @@
         app:layout_constraintStart_toEndOf="@id/ibBack"
         app:layout_constraintTop_toTopOf="@id/ibBack" />
 
-
+<ImageView
+    android:layout_width=""
+    android:layout_height=""
 
 
 
