--- a/app/src/main/res/layout/fragment_visa.xml
+++ b/app/src/main/res/layout/fragment_visa.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingHorizontal="22dp"
     android:padding="23dp"
+    android:paddingHorizontal="22dp"
     tools:context=".ui.theme.paymentfragments.VisaFragment">
 
     <ImageButton
@@ -33,10 +32,15 @@
         app:layout_constraintStart_toEndOf="@id/ibBack"
         app:layout_constraintTop_toTopOf="@id/ibBack" />
 
-<ImageView
-    android:layout_width=""
-    android:layout_height=""
-
+    <ImageView
+        android:id="@+id/ivVisa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
+        android:contentDescription="@string/todo"
+        android:src="@drawable/ic_visa"
+        app:layout_constraintStart_toStartOf="@id/ibBack"
+        app:layout_constraintTop_toBottomOf="@id/ibBack" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
