--- a/app/src/main/res/layout/fragment_visa.xml
+++ b/app/src/main/res/layout/fragment_visa.xml
@@ -40,7 +40,53 @@
         android:contentDescription="@string/todo"
         android:src="@drawable/ic_visa"
         app:layout_constraintStart_toStartOf="@id/ibBack"
-        app:layout_constraintTop_toBottomOf="@id/ibBack" />
+        app:layout_constraintTop_toBottomOf="@id/ibBack"
+        app:layout_constraintBottom_toTopOf="@id/tvAmount"/>
+
+    <TextView
+        android:id="@+id/tvAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:text="Məbləğ"
+        app:layout_constraintStart_toStartOf="@id/ivVisa"
+        app:layout_constraintTop_toBottomOf="@id/ivVisa"
+        app:layout_constraintBottom_toTopOf="@id/etAmount"
+        tools:ignore="HardcodedText" />
+
+    <EditText
+        android:id="@+id/etAmount"
+        android:layout_width="match_parent"
+        android:layout_height="43dp"
+        android:importantForAutofill="no"
+        app:layout_constraintStart_toStartOf="@id/tvAmount"
+        app:layout_constraintTop_toBottomOf="@id/tvAmount"
+        app:layout_constraintBottom_toTopOf="@id/tvDynamicCode"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="16sp"
+        android:padding="5dp"
+        android:inputType="number"
+        android:hint="@string/m_bl_i_daxil_edin"
+        android:background="@drawable/shape_edittext"
+        tools:ignore="HardcodedText"
+        app:layoutDescription="@string/todo"/>
+
+
+    <TextView
+        android:id="@+id/tvDynamicCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:text="Şifrəni daxil edin"
+        app:layout_constraintStart_toStartOf="@id/etAmount"
+        app:layout_constraintTop_toBottomOf="@id/etAmount"
+        tools:ignore="HardcodedText" />
+
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
